--- a/index.html
+++ b/index.html
@@ -876,5 +876,21 @@ try{
 
 })();
 </script>
+
+<style id="suellytics-bg-vibrant">
+body {
+  background: linear-gradient(180deg, #002E2B, #001A17 70%) !important;
+  color: #E8EEF6;
+}
+.card {
+  background: rgba(13, 20, 29, 0.88) !important;
+  border: 1px solid rgba(255, 255, 255, 0.05);
+  backdrop-filter: blur(6px);
+}
+.topbar {
+  background: rgba(13, 20, 29, 0.92) !important;
+  border: 1px solid rgba(255,255,255,0.08);
+}
+</style>
 </body>
 </html>
